--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -50,3 +50,206 @@ body {
     background-color: teal;
     color: white;
 }
+
+
+/* View Products page */
+
+.content-wrap {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.content {
+    display: flex;
+    overflow: auto;
+    height: 100%;
+}
+
+.navigation {
+    height: 100%;
+    position: relative;
+    border-style: solid;
+    border-width: 1px;
+    border-top: 0px;
+    border-bottom: 0px;
+    border-left: 0px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-left: 5px;
+    /* font-size: 1.5em; */
+    font-weight: lighter;
+}
+
+.profile-img-label {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.profile-img {
+    border-radius: 50%;
+    vertical-align: -webkit-baseline-middle;
+    vertical-align: -moz-middle-with-baseline;
+}
+
+.user-name {
+    margin: 7px;
+    font-weight: 600;
+    color: teal;
+}
+
+.btn {
+    display: block;
+    width: 100%;
+    height: 30px;
+    border-style: none;
+    background: white;
+    text-align: start;
+    font-size: 0.85em;
+    color: gray;
+}
+
+.item-num {
+    font-weight: 150;
+}
+
+.create-list-btn {
+    position: absolute;
+    bottom: 0px;
+    color: teal;
+}
+
+.plus {
+    font-size: 2em;
+    font-weight: lighter;
+}
+
+.main-content {
+    padding: 10px;
+    margin: 0px;
+    height: 100%;
+}
+
+.category {
+    border-style: ridge;
+    border-width: 0px;
+    border-bottom-width: 1px;
+    border-color: rgb(243, 232, 232);
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 1.5em;
+    font-weight: 500;
+}
+
+a {
+    text-decoration-line: none;
+}
+
+.categories {
+    font-weight: 800;
+    font-size: 1.2em;
+}
+
+hr {
+    stroke-width: 1px;
+    color: rgb(243, 232, 232);
+}
+
+.img {
+    width: 200px;
+    margin: 10px;
+    /* visibility: hidden; */
+}
+
+.products {
+    display: flex;
+}
+
+.product-desc {
+    font-size: 0.7em;
+    font-weight: 600;
+    display: block;
+}
+
+.details-btn {
+    visibility: hidden;
+}
+
+.img:hover .details-btn {
+    visibility: visible;
+}
+
+.img:hover {
+    border-style: solid;
+    border-color: rgb(200, 195, 195);
+    border-width: 1px;
+}
+
+.product-btn {
+    border-style: solid;
+    border-radius: 3px;
+    border-width: 0px;
+    /* width: 70px; */
+    min-height: 30px;
+    /* margin: 5px 1px; */
+    background-color: teal;
+    color: white;
+    margin-right: 10%;
+}
+
+.details-btn {
+    /* visibility: hidden; */
+}
+
+@media(min-width: 962px) {
+    .col-narrow {
+        width: 20%;
+        float: left;
+    }
+    .col-wide {
+        width: 80%;
+        float: left;
+    }
+}
+
+@media(max-width: 961px) {
+    .col-narrow {
+        width: 30%;
+        float: left;
+    }
+    .col-wide {
+        width: 70%;
+        float: left;
+    }
+}
+
+@media(max-width: 742px) {
+    .col-narrow {
+        width: 40%;
+        float: left;
+    }
+    .col-wide {
+        width: 60%;
+        float: left;
+    }
+}
+
+@media(max-width: 468px) {
+    .content {
+        display: inline-block;
+        overflow: auto;
+        height: 100%;
+    }
+    .navigation {
+        height: 60%;
+    }
+    .col-narrow {
+        width: 60%;
+        float: left;
+    }
+    .col-wide {
+        width: 40%;
+        float: left;
+    }
+}
