--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -342,6 +342,77 @@ hr {
     margin-left: 10px;
 }
 
+
+/* Admin Add Product */
+
+.ad-add-details-box {
+    border-style: ridge;
+    border-width: 1px;
+    border-radius: 0px;
+    border-color: rgb(226, 217, 217);
+    height: 40px;
+    margin-left: 10px;
+    width: 23%;
+    text-align: center;
+    font-size: 0.9em;
+}
+
+.ad-cancel-product-btn {
+    float: left;
+    height: 30px;
+    border-style: ridge;
+    border-radius: 40%;
+    color: white;
+    background-color: rgb(116, 75, 28);
+    border-width: 0px;
+    width: 100px;
+}
+
+.ad-save-product-btn {
+    float: right;
+    height: 30px;
+    border-style: ridge;
+    border-radius: 40%;
+    color: teal;
+    background-color: rgb(0, 0, 0);
+    border-width: 0px;
+    margin-left: 10px;
+    width: 100px;
+}
+
+.btns {
+    height: 40px;
+}
+
+.ad-select {
+    border-style: solid;
+    border-width: 1px;
+    border-color: red;
+    position: relative;
+    width: 35%;
+}
+
+.ad-select-options {
+    position: absolute;
+    width: 100%;
+    margin-left: 0px;
+    top: 0px;
+    left: 0px;
+}
+
+.ad-category-div {
+    display: flex;
+    position: relative;
+}
+
+.ad-input {
+    position: absolute;
+    width: 95%;
+    margin-left: 0px;
+    top: 0px;
+    left: 0px;
+}
+
 @media(min-width: 1218px) {
     .wide {
         width: 50%;
